Add basic HTML and CSS layout

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script type="module" defer ="./index.js"></script>
 </head>
 <body>
-    <h1>Tik Tok DashBoard</h1>
-    
+<search id="search"> 
+    <div id="input-box">
+        <input type="text" id="input-box">
+        <button class="search-button">Search</button>  
+    </div>      
+    <div id="search-list"></div>
+    <div id="display-container" ></div>
+</search>
+
 </body>
 </html>
