add global variables

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module" defer ="./index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
 <search id="search"> 
     <div id="input-box">
         <input type="text" id="input-box">
-        <button class="search-button">Search</button>  
+        <button id="search-button">Search</button>  
     </div>      
     <div id="search-list"></div>
     <div id="display-container" ></div>
