add async function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <search id="search"> 
-    <div id="input-box">
-        <input type="text" id="input-box">
+    <div id="input-container">
+        <input type="text"  value="iron man" id="input">
         <button id="search-button">Search</button>  
     </div>      
     <div id="search-list"></div>
