add search function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+
+    <!--search functionality--> 
 <search id="search"> 
     <div id="input-container">
         <input type="text"  value="iron man" id="input">
@@ -16,6 +18,8 @@
     <div id="search-list"></div>
     <div id="display-container" ></div>
 </search>
+<!--Character index--> 
+
 
 </body>
 </html>
