add auto-complete functionality

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <div id="search-list"></div>
     <div id="display-container" ></div>
 </search>
-<!--Character index--> 
 
+<!--Character index--> 
+<section id="character-index"> 
+
+
+
+</section>    
 
 </body>
 </html>
