--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 </search>
 
 <!--Character index--> 
-<section id="#hero-index"> 
+<section id="hero-index">
 
-
-
-</section>    
-
+    
+</section>
 </body>
 </html>
