--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
     <div id="display-container" ></div>
 </search>
 
+
 <!--Character index--> 
-<section id="hero-index">
+<section>
+<div id="hero-grid">
+
+</div>
 
     
 </section>
+
+
 </body>
 </html>
