add filter / styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
 <!--Character index--> 
 <section>
+<select> 
+    <option class="select-options">Random</option>
+    <option class="select-options">Avengers</option>
+</select>
 <div id="hero-grid">
 
 </div>
