add Avengers filter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!--search functionality--> 
+<!--search functionality--> 
 <search id="search"> 
     <div id="input-container">
         <input type="text"  value="iron man" id="input">
@@ -22,13 +22,14 @@
 
 <!--Character index--> 
 <section>
-<select> 
+<select id="team-select"> 
     <option class="select-options">Random</option>
     <option class="select-options">Avengers</option>
 </select>
 <div id="hero-grid">
 
 </div>
+
 
 
     
